[add]in ft_cd; changed for norm [add]in ft_cd_util; made for norm

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: kdoi <kdoi@student.42tokyo.jp>             +#+  +:+       +#+         #
+#    By: kikeda <kikeda@student.42tokyo.jp>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/23 16:25:43 by kikeda            #+#    #+#              #
-#    Updated: 2021/02/18 22:51:27 by kdoi             ###   ########.fr        #
+#    Updated: 2021/02/24 13:49:31 by kikeda           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
